changed some spacing issues with the comment and delete buttons. Still working on the error 401s

--- a/PEN-NY/HOME-PAGE/style.css
+++ b/PEN-NY/HOME-PAGE/style.css
@@ -129,6 +129,7 @@ p {
 li {
   margin: 30px;
   box-shadow: 0px 5px 10px #393985;
+  text-align: center;
 }
 
 #profileSubmitButton {
@@ -205,6 +206,7 @@ li {
   border-radius: 10px;
   text-transform: uppercase;
   box-shadow: 0px 5px 10px #F5C1E2;
+  margin-left: 30px;
 }
 
 .delete:hover {
@@ -221,6 +223,7 @@ li {
  border-radius: 10px;
  text-transform: uppercase;
  box-shadow: 0px 5px 10px #C8C7ED;
+ margin-left: 30px;
 }
 
 .comment:hover {
