--- a/PEN-NY/PROFILE-PAGE/style.css
+++ b/PEN-NY/PROFILE-PAGE/style.css
@@ -180,8 +180,6 @@ p {
 
 .posts {
   margin: 10px auto;
-  display: flex;
-  flex-direction: column;
   height: 700px;
   width: 80%;
   overflow-y: scroll;
@@ -241,6 +239,7 @@ p {
 
 li {
     margin: 30px;
+    text-align: center;
     box-shadow: 0px 5px 10px #393985;
 }
 
@@ -272,6 +271,7 @@ li {
   border-radius: 10px;
   text-transform: uppercase;
   box-shadow: 0px 5px 10px #F5C1E2;
+  margin-left: 30px;
 }
 
 .delete:hover {
@@ -288,6 +288,7 @@ li {
   border-radius: 10px;
   text-transform: uppercase;
   box-shadow: 0px 5px 10px #C8C7ED;
+  margin-left: 30px;
 }
 
 .comment:hover {
@@ -366,7 +367,7 @@ span.psw {
    width: 100%;
 }
 /*appended list items to comment button not functioning*/
-/* #commentInput, #commentContent {
+#commentInput, #commentContent {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -374,4 +375,4 @@ span.psw {
   border: 1px solid #393985;
   box-sizing: border-box;
   border: none;
-} */
+}
